@@ -1,7 +1,8 @@
 ChangeLog file for Endian libencloud
 
 libencloud 0.X:
-	- custom ProxyFactory to avoid proxying localhost requests [CONNECT-106]
+	- custom ProxyFactory to avoid proxying localhost requests;
+	  handle global proxy settings in core [CONNECT-106]
 	- auth: typeFromQt(), typeToQt(), toString()
 	- proxy: toString()
 
